--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">PaintIt</string>
+    <string name="app_name">Paint It</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="profile_tab">Profile</string>
+    <string name="store_tab">Store</string>
 </resources>
