--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="profile_tab">Profile</string>
     <string name="store_tab">Store</string>
+    <string name="see_all">See All</string>
 </resources>
