--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <string name="profile_tab">Profile</string>
     <string name="store_tab">Store</string>
     <string name="see_all">See All</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string-array name="color_display_list">
+        <item>1</item>
+        <item>3</item>
+        <item>5</item>
+    </string-array>
 </resources>
