--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="store_tab">Store</string>
     <string name="see_all">See All</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="item_added_cart">Item added to the cart</string>
 
     <!-- Strings related to Settings -->
 
