--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="see_all">See All</string>
     <string name="title_activity_settings">Settings</string>
     <string name="item_added_cart">Item added to the cart</string>
+    <string name="checkout_string">CHECKOUT</string>
 
     <!-- Strings related to Settings -->
 
