--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
         <item>3</item>
         <item>5</item>
     </string-array>
+
+
+
+    <!-- About Libraries strings -->
+    <string name="aboutLibraries_description_showIcon">true</string>
+    <string name="aboutLibraries_description_showVersion">true</string>
+    <string name="aboutLibraries_description_text">Place your description here :D</string>
 </resources>
