updated the checkout and changed the message in the about us fragment #80

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,5 @@
     <string name="aboutLibraries_description_showIcon">true</string>
     <string name="aboutLibraries_description_showVersion">true</string>
     <string name="aboutLibraries_description_text">Place your description here :D</string>
-    <string name="about_us_description">We are a proud painting store ready for your paint troubles! we are located in Windsor, ON and carry all the different items you need to get those new layers ready. Through our app you will be able to pick the colours for your paints and order them to pick them up in store!</string>
+    <string name="about_us_description">We are a proud paint store here to fulfill your paint needs! We are located in Windsor ON. We carry all the necessary tools for you to get any paint job done. Using our app, users are able to select colors, order paint in those colors, and pick up their paint from our store.</string>
 </resources>
