--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,18 @@
     <!-- About Libraries strings -->
     <string name="aboutLibraries_description_showIcon">true</string>
     <string name="aboutLibraries_description_showVersion">true</string>
-    <string name="aboutLibraries_description_text">Place your description here :D</string>
-    <string name="about_us_description">We are a proud paint store here to fulfill your paint needs! We are located in Windsor ON. We carry all the necessary tools for you to get any paint job done. Using our app, users are able to select colors, order paint in those colors, and pick up their paint from our store.</string>
+    <string name="aboutLibraries_description_text">Paint it is a fictional paint store developed by Jose Georges and Keegan Oribine from 2nd Year of Mobile Applications Development in St Clair College.</string>
+    <string name="about_us_description">We are a proud paint store here to fulfill your paint needs! We are located in Windsor ON. We carry all the necessarytools for you to get any paint job done. Using our app, users are able to select colors, order paint in those colors, and pick up their paint from our store.</string>
+
+
+    <string name="define_Toasty"></string>
+    <string name="library_Toasty_author">GrenderG</string>
+    <string name="library_Toasty_authorWebsite">https://github.com/GrenderG/Toasty</string>
+    <string name="library_Toasty_libraryName">Toasty</string>
+    <string name="library_Toasty_libraryDescription">The usual Toast, but with steroids.</string>
+    <string name="library_Toasty_libraryVersion">1.3.0</string>
+    <string name="library_Toasty_libraryWebsite">https://github.com/GrenderG/Toasty</string>
+    <string name="library_Toasty_licenseId">apache_2_0</string>
+    <string name="library_Toasty_isOpenSource">true</string>
+    <string name="library_Toasty_repositoryLink">https://github.com/GrenderG/Toasty</string>
 </resources>
